--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,19 @@
         $("#message").html("Failed to create new object, with error code: " + JSON.stringify(err));
       })
     }
+
+    function fetch(){
+    var TestClass = ncmb.DataStore("FetchTest");
+    TestClass.fetch()
+    .then(function(results){
+        var data = results.get("text");
+        var update = results.get("updateDate");
+        $("#message").html(data + ":" + update);
+    })
+    }
+    
+
+
     </script>
 </head>
 <body>
@@ -41,6 +54,7 @@
   <div id="button">
     <button id="btnA" class="btn" onclick="register()">Register</button>
     <button id = "btnB"  class = "btn" onclick = "fetch()">Fetch</button>
+     <button id = "btnC"  class = "btn" onclick = "fetchAll()">Fetch All</button>
   </div>
 
   <div id="message">message area</div>
